--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "description": "大きくなった日本語フォントを小さくする！\nグロリソ禁止ワールドでも機能します！\nby YuuhaLand",
     "uuid": "88c84c3a-155f-431d-99ba-ed9de52c8475",
     "version": [ 1, 0, 0 ],
-    "min_engine_version": [ 1, 13, 0 ]
+    "min_engine_version": [ 1, 13, 0 ],
+    "pack_scope": "global"
   },
   "modules": [
     {
